Modified script for generating valid integration tests
